[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/gui/hud.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/sfx/explosive_star_particles.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/overworld/boss_combat.gd" type="Script" id=3]
[ext_resource path="res://images/gui/hp_bar_full.png" type="Texture" id=4]
[ext_resource path="res://images/gui/hp_bar_empty.png" type="Texture" id=5]
[ext_resource path="res://themes/title_screen_buttons.tres" type="Theme" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="boss_combat" type="Node2D"]
script = ExtResource( 3 )

[node name="db_container" type="Node2D" parent="."]

[node name="objects" type="YSort" parent="."]

[node name="hud" parent="." instance=ExtResource( 1 )]

[node name="boss_hp_container" type="VBoxContainer" parent="hud"]
margin_left = 120.0
margin_top = 992.0
margin_right = 709.0
margin_bottom = 1059.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boss_name_label" type="Label" parent="hud/boss_hp_container"]
margin_right = 589.0
margin_bottom = 14.0
text = "The Galactic Cake"

[node name="boss_hp_bar" type="TextureProgress" parent="hud/boss_hp_container"]
margin_top = 18.0
margin_right = 589.0
margin_bottom = 67.0
value = 75.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boss_hp_label" type="Label" parent="hud/boss_hp_container"]
margin_top = 71.0
margin_right = 589.0
margin_bottom = 85.0
text = "35/70"

[node name="exit_game_button" type="Button" parent="hud"]
margin_left = 1824.0
margin_top = 984.0
margin_right = 1956.0
margin_bottom = 1052.0
theme = ExtResource( 6 )
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 540.001, 261 )

[node name="particles" type="Node2D" parent="."]

[node name="explosive_star_particles" parent="particles" instance=ExtResource( 2 )]
material = SubResource( 1 )
